--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@
 } 
 
 body {
+    display: flex;
+    flex-direction:column;
+    justify-content: space-around;
+    padding: 0 40px;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -28,7 +32,6 @@ body {
 
 .header__logo {
     width: 100px;
-    margin-left: 30px;
 }
 
 .header__menu {
@@ -64,7 +67,7 @@ body {
 }
 
 .main {
-    width: 90%;
+    width: 100%;
     margin: 40px auto;
     display: grid;
     grid-template-columns: 40% 1fr;
